encrypted form data

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
   <body>
     <div id="root"></div>
 
-    <script src="/build/bundle.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script> -->
+    <!-- <script src="/build/bundle.js"></script> -->
+
   </body>
 </html>
